more styling and new text drafts

--- a/public/index.html
+++ b/public/index.html
@@ -59,13 +59,13 @@
                         <a href="#highlights">Highlights</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#zahlen">Zahlen & Technologie</a>
+                        <a href="#zahlen">Zahlen & Fakten</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#demo">Demo</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#involvierte">Involvierte</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#involvierte">Demo</a>
                     </li>
                 </ul>
             </div>
@@ -85,7 +85,7 @@
                     <div class="intro-text">
                         <span class="name">SDBB OTP - Berufsberatung 2.0</span>
                         <hr class="star-light">
-                        <span class="skills">Die Online Test Platform für Berufsberatung in der Schweiz</span>
+                        <span class="skills">Die Online Test Plattform für Berufsberatung in der Schweiz</span>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3">
-                    <img src="img/girl.png" height="350px" />
+                    <img class="visible-lg" src="img/girl.png" height="350px" />
                 </div>
                 <div class="col-lg-9">
                     <p>
@@ -111,7 +111,7 @@
                         Konferenz der kantonalen Erziehungsdirektoren (EDK).
                     </p>
                     <p>
-                        In dieser Funktion koordiniert das Zentrum unter Anderem die interkantonale Zusammenarbeit bei der
+                        In dieser Funktion koordiniert das Zentrum unter anderem die interkantonale Zusammenarbeit bei der
                         Berufsberatung. Konkret bedeutet das auch, dass Tests der Berufsberatung unterhalten, weiterentwickelt
                         und auf nationaler Ebene verfügbar gemacht werden.
                     </p>
@@ -120,11 +120,11 @@
                         veraltete online Versionen, die meisten aber gab es nur auf Papier. Das hiess sowohl für
                         Ratsuchende sowie BeraterInnen viel Papier, von Hand angefertigte Auswertungen, zusammenhangslose Links.
                         Für das SDBB hiess dies grosse Produktionsaufwände, keine zentrale Datensammlung zur Analyse und
-                        Weiterentwicklung der verfahren, keine einfache Verrechnung der Benutzung von Tests an
-                        Beratungszentren und Kantone, etc..
+                        Weiterentwicklung der Verfahren, keine einfache Verrechnung der Benutzung von Tests an
+                        Beratungszentren und Kantone, etc.
                     </p>
                     <p>
-                        Der Wunsch nach einer zentralen Verwaltungsplatform mit der Möglichkeit, beliebige Testverfahren über
+                        Der Wunsch nach einer zentralen Verwaltungsplattform mit der Möglichkeit, beliebige Testverfahren über
                         eine einheitliche Schnittstelle anbinden zu können, ist auf diesem Hintergrund leicht nachzuvollziehen.
                     </p>
                 </div>
@@ -141,27 +141,97 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-9">
-                    <p>
-                        Die Online Test Plattform (OTP) des SDBB digitalisiert und zentralisiert die Zuweisung, Durchführung sowie
-                        Auswertung von eignungsdiagnostischen Testverfahren schweizweit. Dabei geht es um eine Fülle von
-                        Eignungs- und Interessetests, welche Berufsberaterinnen und -beratern helfen, passende Berufsbilder
-                        für Schüler, Studenten und Erwachsene zu finden.
-                    </p>
-                    <p>
-                        Die OTP besteht aus einem Verwaltungsmodul und einer unbeschränkten Anzahl von unabhängig entwickelten
-                        Testverfahren. Das Verwaltungsmodul hat die folgenden Hauptmerkmale:
-                    </p>
-                    <ul>
-                        <li>Verwaltung der Testverfahren</li>
-                        <li>Verwaltung von Nutzer und Nutzergruppen</li>
-                        <li>Nutzungsstatistiken und Kostenzähler zur Verrechnung an Kantone und Beratungsstellen</li>
-                        <li>Verwaltung der Testdaten</li>
-                    </ul>
-                    <p>Hier kommt noch mehr...</p>
+                <div class="col-lg-10">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <p>
+                                <strong>Die Online Test Plattform schafft Public Value.</strong>
+                            </p>
+                            <p>
+                                Das Schweizerische Dienstleistungszentrum für Berufsbildung sowie Berufs-, Studien- und
+                                Laufbahnberatung (SDBB) stellt mit der OTP den kantonalen Berufs-, Studien- und
+                                Laufbahnberatungsstellen eine Reihe relevanter Instrumente zur Verfügung.
+                                Das SDBB setzt dabei auf eine nationale Lösung mit föderalem Charakter, welche kantonale Eigenheiten
+                                berücksichtigt und Transparenz bei der Abrechnung der Tests und Zurechnung an Beratungszentren
+                                und die Kantone ermöglicht.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <dl>
+                                <dt>
+                                    Informationsqualität und -quantität
+                                </dt>
+                                <dd>
+                                    Die OTP digitalisiert und zentralisiert die Zuweisung, Durchführung sowie die automatische
+                                    Auswertung von eignungsdiagnostischen Testverfahren in den drei Landessprachen schweizweit.
+                                    Dabei geht es um eine Fülle von Eignungs- und Interessetests, welche Berufsberaterinnen und
+                                    -beratern helfen, passende Berufsbilder für Schüler, Studenten und Erwachsene zu finden.
+                                    Die OTP stellt automatisch verschiedene Auswertungsmöglichkeiten der Testresultate zur Verfügung.
+                                </dd>
+                                <dt>
+                                    Klarer Nutzen der angebotenen Leistungen
+                                </dt>
+                                <dd>
+                                    Die Plattform vereinfacht die Arbeit der Beratungsstellen. Es können Testungen einzelner
+                                    Klienten und Klientinnen (einer oder mehrere Tests) oder Gruppentestungen durchgeführt werden.
+                                    Die Klienten können die Tests webbasiert zu Hause oder vor Ort ausfüllen. Berater/innen
+                                    erhalten Informationen zu ihren Klienten und deren Stati. Testrestultate werden automatisch
+                                    ausgewertet. Die Auswertungen stehen als PDF-Dokumente zur Verfügung und können in Umsysteme
+                                    übernommen werden
+                                </dd>
+                                <dt>
+                                    Darstellung und Formulierungen dem Zielpublikum angepasst
+                                </dt>
+                                <dd>
+                                    Die Beratenden werden in ihrer täglichen Arbeit unterstützt. Die OTP ermöglicht ein einfaches
+                                    Erfassen und Einladen der Klienten. Berichte könnten auf Knopfdruck abgeholt werden und
+                                    Berichte in PDF-Format stehen zur Verfügung.
+                                </dd>
+                            </dl>
+                        </div>
+                        <div class="col-lg-6">
+                            <dl>
+                                <dt>
+                                    Gute Usability, Informationsarchitektur und Gestaltung
+                                </dt>
+                                <dd>
+                                    fehlt noch...
+                                </dd>
+                                <dt>
+                                    Klare Orientierung
+                                </dt>
+                                <dd>
+                                    Sowohl Beratende wie auch Klienten werden mit Hilfe der OTP durch den Prozess geführt.
+                                    Besonders Augenmerk wurde gelegt.
+                                    Hier mehr ausführen...
+                                </dd>
+                                <dt>
+                                    Interaktion, Kommunikation, Partizipation
+                                </dt>
+                                <dd>
+                                    OTP ermöglicht eine Interaktion mit dem Kunden, ….
+                                    Hier mehr ausführen...
+                                </dd>
+                                <dt>
+                                    Sicherheit
+                                </dt>
+                                <dd>
+                                    Die OTP verfügt über anonymisierte Auswertungsmöglichkeiten zu Benutzern und Testnutzung.
+                                    Personalisierte Testergebnisse von Klienten können nur von den zuständigen Beratungsfachleuten
+                                    eingesehen werden. Testautoren und -autorinnen können nur die Rohdaten ihrer Testverfahren
+                                    exportieren. OTP erfüllt die Informationssicherheit und bietet eine optimale Basis für die
+                                    Einhaltung des Datenschutzes.
+
+                                    Hier mehr/klarer ausführen.
+                                </dd>
+                            </dl>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-3 text-right">
-                    <img src="img/cook.png" height="350px" />
+                <div class="col-lg-2 text-right">
+                    <img class="visible-lg" src="img/cook.png" height="350px" />
                 </div>
             </div>
         </div>
@@ -177,7 +247,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3">
-                    <img src="img/counselor.png" width="100%" />
+                    <img class="visible-lg" src="img/counselor.png" width="100%" />
                 </div>
                 <div class="col-lg-9">
                     <ul>
@@ -201,41 +271,54 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Zahlen & Technologie</h2>
+                    <h2>Zahlen & Fakten</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-7">
-                    <p>Hier würde ich so Zahlen wie die folgenden erfunden Zahlen bringen:</p>
+                    <p>
+                        Die OTP wird seit dem Launch im August 2015 bereits rege genutzt.
+                    </p>
                     <ul>
-                        <li>135 BerufsberaterInnen</li>
-                        <li>aus X Kantonen</li>
-                        <li>und Y unabhängigen Beratungsstellen</li>
-                        <li>kümmern sich um 1023 Ratsuchende pro Jahr,</li>
-                        <li>weisen diesen 2356 Testverfahren zu</li>
-                        <li>während Z Administratoren blabla</li>
+                        <li>Mehr als <strong>1000 BerufsberaterInnen</strong></li>
+                        <li>aus <strong>26 Kantonen</strong></li>
+                        <li>kümmern sich pro Jahr um <strong>Tausende Ratsuchende</strong>,</li>
+                        <li>welche <strong>Zehntausende Testdurchführungen</strong> machen</li>
+                        <li>während <strong>Duzende Administratoren</strong> sich um Kosten, Rechte und Daten kümmern.</li>
                     </ul>
-                    <p>Tech Stack würde ich wohl weglassen und die API woanders noch etwas detaillierter beschreiben?</p>
                 </div>
                 <div class="col-lg-5">
-                    <h4>Die 14 bisher angebundenen Testverfahren</h4>
+                    <p>
+                        An das zentrale von <a class="success" href="http://www.netcetera.com/de/" target="_blank">netcetera</a>
+                        entwickelte Verwaltungsmodul sind über eine XML REST Schnittstelle bereits 14 von
+                        <a href="https://www.cloud-solutions.net/de/" target="_blank">cloud solutions</a> entwickelte
+                        Testverfahren angebunden.
+                    </p>
                     <ul>
-                        <li>BFT22-J - Berufsfeldertest 22 Deutsch</li>
-                        <li>TDP22 - Berufsfeldertest 22 Französisch</li>
-                        <li>TCP22 - Berufsfeldertest 22 Italienisch</li>
-                        <li>F-I-T 2012 - Fotointeressetest in Deutsch</li>
-                        <li>T-I-P 2012 - Fotointeressetest in Französisch</li>
-                        <li>T-I-I 2012 - Fotointeressetest in Italienisch</li>
-                        <li>PGA - Gamper: Préférences générales d‘activités</li>
-                        <li>PMT - Gamper: Préférences pour les activités manuelles et techniques</li>
-                        <li>PRS - Gamper: Préférences d‘activités relationnelles et de services</li>
-                        <li>PEB - Gamper: Préférences études bachelors</li>
-                        <li>BPS - Gamper: Bilan Personelle Scolaire</li>
-                        <li>SIT 2 - SozialinteressetestAbgeschlossen</li>
-                        <li>BFT22-E - Berufsfeldertest für Erwachsene (DE)</li>
-                        <li>BRTA - Batterie romande de tests d’aptitudes</li>
+                        <li>Berufsfeldertest 22 in DE/FR/IT</li>
+                        <li>Fotointeressetest 2012 in DE/FR/IT</li>
+                        <li>Sozialinteressetest SIT 2 in DE</li>
+                        <li>Gamper Interessetestreihe in FR</li>
+                        <li>Gamper Schulniveautest in FR</li>
+                        <li>BRTA Leistungstest in FR</li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="demo">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Demo-Zugänge</h2>
+                    <hr class="star-primary" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p>Zugänge und Kurzanleitung einer typischen Handlung</p>
                 </div>
             </div>
         </div>
@@ -244,17 +327,13 @@
     <section id="involvierte">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 text-center">
+                <div class="col-lg-12 text-center">
                     <h2>Involvierte</h2>
-                    <hr class="star-primary" />
-                </div>
-                <div class="col-lg-6 text-center">
-                    <h2>Demo-Zugänge</h2>
                     <hr class="star-primary" />
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 text-center">
+                <div class="col-lg-12 text-center">
                     <img src="img/sdbb-logo.gif" width="200" />
                     <p>Beschreibung der Rolle</p>
                     <hr />
@@ -263,9 +342,6 @@
                     <hr />
                     <img src="img/cs-logo.png" width="200" />
                     <p>Beschreibung der Rolle</p>
-                </div>
-                <div class="col-lg-6 text-center">
-                    <p>Zugänge und Kurzanleitung einer typischen Handlung</p>
                 </div>
             </div>
         </div>
