placeholder-texte hervorheben

--- a/public/index.html
+++ b/public/index.html
@@ -197,7 +197,7 @@
                                     Gute Usability, Informationsarchitektur und Gestaltung
                                 </dt>
                                 <dd>
-                                    fehlt noch...
+                                    <span class="placeholder-text">hier braucht es noch text</span>
                                 </dd>
                                 <dt>
                                     Klare Orientierung
@@ -205,14 +205,14 @@
                                 <dd>
                                     Sowohl Beratende wie auch Klienten werden mit Hilfe der OTP durch den Prozess geführt.
                                     Besonders Augenmerk wurde gelegt.
-                                    Hier mehr ausführen...
+                                    <span class="placeholder-text">hier braucht es noch text</span>
                                 </dd>
                                 <dt>
                                     Interaktion, Kommunikation, Partizipation
                                 </dt>
                                 <dd>
                                     OTP ermöglicht eine Interaktion mit dem Kunden, ….
-                                    Hier mehr ausführen...
+                                    <span class="placeholder-text">hier braucht es noch text</span>
                                 </dd>
                                 <dt>
                                     Sicherheit
@@ -224,8 +224,11 @@
                                     exportieren. OTP erfüllt die Informationssicherheit und bietet eine optimale Basis für die
                                     Einhaltung des Datenschutzes.
 
-                                    Hier mehr/klarer ausführen.
+                                    <span class="placeholder-text">hier braucht es noch text</span>
                                 </dd>
+                                <dt>Technologie</dt>
+                                <dd class="placeholder-text">Hier würd ich nochmals die Trennung durch API erwähnen und exemplarisch ein paar der
+                                    eingesetzten Technologien erwähnen.</dd>
                             </dl>
                         </div>
                     </div>
@@ -250,6 +253,8 @@
                     <img class="visible-lg" src="img/counselor.png" width="100%" />
                 </div>
                 <div class="col-lg-9">
+                    <span class="placeholder-text">hier würd ich in kürze die allerwichtigsten punkte von oben auflisten,
+                    wie von Micaëla vorgeschlagen</span>
                     <ul>
                         <li>Digitalisierung des Pen & Paper Approach (Kostensparen, erleichterter Zugang, Standardisierung)</li>
                         <li>Automatische Auswertungen (mehr Effizienz, weniger Fehleranfälligkeit)</li>
