shortening and editing texts

--- a/public/index.html
+++ b/public/index.html
@@ -64,9 +64,6 @@
                     <li class="page-scroll">
                         <a href="#demo">Demo</a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="#involvierte">Involvierte</a>
-                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -102,7 +99,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3">
-                    <img class="visible-lg" src="img/girl.png" height="350px" />
+                    <img class="visible-lg" src="img/girl.png" height="300px" />
                 </div>
                 <div class="col-lg-9">
                     <p>
@@ -116,9 +113,8 @@
                         und auf nationaler Ebene verfügbar gemacht werden.
                     </p>
                     <p>
-                        Bis zur Entwicklung der OTP war dies keine leichte Aufgabe. Von einzelnen Tests gab es z. T.
-                        veraltete online Versionen, die meisten aber gab es nur auf Papier. Das hiess sowohl für
-                        Ratsuchende sowie BeraterInnen viel Papier, von Hand angefertigte Auswertungen, zusammenhangslose Links.
+                        Bis zur Entwicklung der OTP war dies keine leichte Aufgabe. Die meisten Tests gab es nur auf Papier.
+                        Das hiess für Ratsuchende sowie BeraterInnen viel Papier und von Hand angefertigte Auswertungen.
                         Für das SDBB hiess dies grosse Produktionsaufwände, keine zentrale Datensammlung zur Analyse und
                         Weiterentwicklung der Verfahren, keine einfache Verrechnung der Benutzung von Tests an
                         Beratungszentren und Kantone, etc.
@@ -148,12 +144,9 @@
                                 <strong>Die Online Test Plattform schafft Public Value.</strong>
                             </p>
                             <p>
-                                Das Schweizerische Dienstleistungszentrum für Berufsbildung sowie Berufs-, Studien- und
-                                Laufbahnberatung (SDBB) stellt mit der OTP den kantonalen Berufs-, Studien- und
-                                Laufbahnberatungsstellen eine Reihe relevanter Instrumente zur Verfügung.
-                                Das SDBB setzt dabei auf eine nationale Lösung mit föderalem Charakter, welche kantonale Eigenheiten
-                                berücksichtigt und Transparenz bei der Abrechnung der Tests und Zurechnung an Beratungszentren
-                                und die Kantone ermöglicht.
+                                Das SDBB stellt mit der OTP den kantonalen Berufs-, Studien- und Laufbahnberatungsstellen
+                                eine Reihe relevanter Instrumente erstmal online zur Verfügung. Das SDBB setzt dabei auf eine
+                                nationale aber flexible Lösung, welche kantonale Eigenheiten abzubilden vermag.
                             </p>
                         </div>
                     </div>
@@ -164,71 +157,56 @@
                                     Informationsqualität und -quantität
                                 </dt>
                                 <dd>
-                                    Die OTP digitalisiert und zentralisiert die Zuweisung, Durchführung sowie die automatische
-                                    Auswertung von eignungsdiagnostischen Testverfahren in den drei Landessprachen schweizweit.
-                                    Dabei geht es um eine Fülle von Eignungs- und Interessetests, welche Berufsberaterinnen und
-                                    -beratern helfen, passende Berufsbilder für Schüler, Studenten und Erwachsene zu finden.
-                                    Die OTP stellt automatisch verschiedene Auswertungsmöglichkeiten der Testresultate zur Verfügung.
+                                    Die OTP digitalisiert und zentralisiert die Durchführung, Auswertung und grafische
+                                    Resultaterückmeldung von eignungsdiagnostischen Tests in den drei Landessprachen.
+                                    Eine Fülle von Leistungs- und Interessetests, hilft Beratenden, passende Berufsbilder
+                                    für ihr Klientel zu finden.
                                 </dd>
                                 <dt>
                                     Klarer Nutzen der angebotenen Leistungen
                                 </dt>
                                 <dd>
-                                    Die Plattform vereinfacht die Arbeit der Beratungsstellen. Es können Testungen einzelner
-                                    Klienten und Klientinnen (einer oder mehrere Tests) oder Gruppentestungen durchgeführt werden.
-                                    Die Klienten können die Tests webbasiert zu Hause oder vor Ort ausfüllen. Berater/innen
-                                    erhalten Informationen zu ihren Klienten und deren Stati. Testrestultate werden automatisch
-                                    ausgewertet. Die Auswertungen stehen als PDF-Dokumente zur Verfügung und können in Umsysteme
-                                    übernommen werden
+                                    Die OTP vereinfacht den Beratungsprozess für alle Beteiligten. Beratende weisen
+                                    Klienten beliebige Testverfahren zu, welche webbasiert und ortsunabhängig ausgefüllt
+                                    werden können. Die Daten werden automatisch ausgewertet und den Beratenden
+                                    zu verfügung gestellt. Die zentrale Datenhaltung ermöglicht die kontinuierlich
+                                    Verbesserung und Normierung der Verfahren. Die Kantone wissen jederzeit um ihre
+                                    Beratungszahlen und -kosten.
                                 </dd>
                                 <dt>
-                                    Darstellung und Formulierungen dem Zielpublikum angepasst
+                                    Abstimmung auf Zielpublikum, Usability und Informationsarchitektur, Orientierung
                                 </dt>
                                 <dd>
-                                    Die Beratenden werden in ihrer täglichen Arbeit unterstützt. Die OTP ermöglicht ein einfaches
-                                    Erfassen und Einladen der Klienten. Berichte könnten auf Knopfdruck abgeholt werden und
-                                    Berichte in PDF-Format stehen zur Verfügung.
+                                    Die Beratenden werden in ihrer täglichen Arbeit unterstützt und durch die Prozesse geführt.
+                                    Kantonale Strukturen und andere Rollen können im Berechtigungssystem flexibel abgebildet werden.
+                                    Das Ausfüllen der Tests ist unkompliziert und kann dank responsive Design auf Desktop
+                                    oder Tablets erledigt werden. Berichte können aus Elementen wunschgemäss zusammengestellt
+                                    und als PDF-Datei generiert werden.
                                 </dd>
                             </dl>
                         </div>
                         <div class="col-lg-6">
                             <dl>
                                 <dt>
-                                    Gute Usability, Informationsarchitektur und Gestaltung
-                                </dt>
-                                <dd>
-                                    <span class="placeholder-text">hier braucht es noch text</span>
-                                </dd>
-                                <dt>
-                                    Klare Orientierung
-                                </dt>
-                                <dd>
-                                    Sowohl Beratende wie auch Klienten werden mit Hilfe der OTP durch den Prozess geführt.
-                                    Besonders Augenmerk wurde gelegt.
-                                    <span class="placeholder-text">hier braucht es noch text</span>
-                                </dd>
-                                <dt>
                                     Interaktion, Kommunikation, Partizipation
                                 </dt>
                                 <dd>
                                     OTP ermöglicht eine Interaktion mit dem Kunden, ….
-                                    <span class="placeholder-text">hier braucht es noch text</span>
+                                    <span class="placeholder-text">ehe keinen Zusatznutzen von diesem Abschnitt, liegt auf der Hand, würd ich weglassen.</span>
                                 </dd>
                                 <dt>
                                     Sicherheit
                                 </dt>
                                 <dd>
-                                    Die OTP verfügt über anonymisierte Auswertungsmöglichkeiten zu Benutzern und Testnutzung.
-                                    Personalisierte Testergebnisse von Klienten können nur von den zuständigen Beratungsfachleuten
-                                    eingesehen werden. Testautoren und -autorinnen können nur die Rohdaten ihrer Testverfahren
-                                    exportieren. OTP erfüllt die Informationssicherheit und bietet eine optimale Basis für die
-                                    Einhaltung des Datenschutzes.
-
-                                    <span class="placeholder-text">hier braucht es noch text</span>
+                                    Die OTP ist auf optimale Informationssicherheit und hohe Datenschutzanforderungen
+                                    ausgelegt. Alle Daten werden zentral auf SDBB-eigenen Servern gespeichert. Alle Teile
+                                    der OTP richten sich nach aktueller Best-Practice, was die Daten- und
+                                    Applikationssicherheit anbelangt. Persönliche Testergebnisse können nur von den
+                                    zuständigen Beratungsfachleuten eingesehen werden. Testautoren können nur die
+                                    anonymisierten Rohdaten ihrer Verfahren exportieren.
                                 </dd>
                                 <dt>Technologie</dt>
-                                <dd class="placeholder-text">Hier würd ich nochmals die Trennung durch API erwähnen und exemplarisch ein paar der
-                                    eingesetzten Technologien erwähnen.</dd>
+                                <dd></dd>
                             </dl>
                         </div>
                     </div>
@@ -323,30 +301,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Zugänge und Kurzanleitung einer typischen Handlung</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="involvierte">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Involvierte</h2>
-                    <hr class="star-primary" />
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <img src="img/sdbb-logo.gif" width="200" />
-                    <p>Beschreibung der Rolle</p>
-                    <hr />
-                    <img src="img/nca-logo.gif" width="200" />
-                    <p>Beschreibung der Rolle</p>
-                    <hr />
-                    <img src="img/cs-logo.png" width="200" />
-                    <p>Beschreibung der Rolle</p>
+                    <p class="placeholder-text">Zugänge und Kurzanleitung einer typischen Handlung. Kommt noch von Oli.</p>
                 </div>
             </div>
         </div>
