add text about technology

--- a/public/index.html
+++ b/public/index.html
@@ -206,7 +206,13 @@
                                     anonymisierten Rohdaten ihrer Verfahren exportieren.
                                 </dd>
                                 <dt>Technologie</dt>
-                                <dd></dd>
+                                <dd>
+                                    Für die Umsetzung der Lösung wurden eine Reihe moderner Web Stacks eingesetzt. Die
+                                    Kommunikation zwischen den Testverfahren und der Verwaltungsplattform läuft über eine
+                                    XML REST Schnittstelle mit Versionskontrolle. Die Lösung ist fehlertolerant,
+                                    falls Verbindungen fehlschlagen, stellen Synchronisationsjobs regelmässig den korrekten
+                                    Zustand wieder her.
+                                </dd>
                             </dl>
                         </div>
                     </div>
