--- a/public/index.html
+++ b/public/index.html
@@ -76,8 +76,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="embed-container">
-                        <iframe src="https://www.youtube.com/embed/H9IWS-pjh9A" frameborder="0" allowfullscreen></iframe>
+                    <div class="embed-pusher">
+                        <div class="embed-container">
+                            <iframe src="https://www.youtube.com/embed/H9IWS-pjh9A" frameborder="0" allowfullscreen></iframe>
+                        </div>
                     </div>
                     <div class="intro-text">
                         <span class="name">SDBB OTP - Berufsberatung 2.0</span>
@@ -99,7 +101,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3">
-                    <img class="visible-lg" src="img/girl.png" height="300px" />
+                    <img class="visible-lg" src="img/girl.png" height="280" />
                 </div>
                 <div class="col-lg-9">
                     <p>
@@ -192,7 +194,7 @@
                                 </dt>
                                 <dd>
                                     OTP ermöglicht eine Interaktion mit dem Kunden, ….
-                                    <span class="placeholder-text">ehe keinen Zusatznutzen von diesem Abschnitt, liegt auf der Hand, würd ich weglassen.</span>
+                                    <span class="placeholder-text">sehe keinen Zusatznutzen von diesem Abschnitt, liegt auf der Hand, würd ich weglassen.</span>
                                 </dd>
                                 <dt>
                                     Sicherheit
@@ -218,7 +220,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 text-right">
-                    <img class="visible-lg" src="img/cook.png" height="350px" />
+                    <img class="visible-lg" src="img/cook.png" height="400px" />
                 </div>
             </div>
         </div>
@@ -233,23 +235,18 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3">
-                    <img class="visible-lg" src="img/counselor.png" width="100%" />
+                <div class="col-lg-2">
+                    <img class="visible-lg" src="img/counselor.png" height="150px" />
                 </div>
-                <div class="col-lg-9">
-                    <span class="placeholder-text">hier würd ich in kürze die allerwichtigsten punkte von oben auflisten,
-                    wie von Micaëla vorgeschlagen</span>
+                <div class="col-lg-10">
                     <ul>
-                        <li>Digitalisierung des Pen & Paper Approach (Kostensparen, erleichterter Zugang, Standardisierung)</li>
+                        <li>Digitalisierung von Papiertests (Kosten sparen, erleichterter Zugang, Standardisierung)</li>
                         <li>Automatische Auswertungen (mehr Effizienz, weniger Fehleranfälligkeit)</li>
-                        <li>Zentrales Datenpool (ermöglicht schweizweite anonymisierte Auswertungen, vereinfacht Normierungen massiv)</li>
-                        <li>Standortunabhängigkeit & Notifikationsmanagement</li>
-                        <li>Homogenes Klientenmanagement</li>
+                        <li>Zentrales Datenpool (ermöglicht schweizweite anonymisierte Auswertungen, vereinfacht Normierungen)</li>
                         <li>Entkopplung der Testverfahren dank Web-Schnittstelle (Unabhängigkeit von Testanbietern und -entwicklern)</li>
                         <li>Nutzungsstatistiken & Abrechnungslogik (einfache, testübergreifende Nutzungsanalyse und Abrechnung)</li>
                         <li>Flexibles Benutzer-, Gruppen- und Rechtesystem (Berücksichtigung des Föderalismus durch Abbildung kantonsspezifischer Strukturen)</li>
-                        <li>Föderalistische Cloudlösung mit Datenhaltung in der Schweiz</li>
-                        <li>Endgerätunabhängig und responsive Design für die Testdurchführungen</li>
+                        <li>Responsive Design für Administration und Testdurchführungen (Durchführung z. B. auf Tablet möglich)</li>
                     </ul>
                 </div>
             </div>
