improved styles for highlights

--- a/public/index.html
+++ b/public/index.html
@@ -240,13 +240,13 @@
                 </div>
                 <div class="col-lg-10">
                     <ul>
-                        <li>Digitalisierung von Papiertests (Kosten sparen, erleichterter Zugang, Standardisierung)</li>
-                        <li>Automatische Auswertungen (mehr Effizienz, weniger Fehleranfälligkeit)</li>
-                        <li>Zentrales Datenpool (ermöglicht schweizweite anonymisierte Auswertungen, vereinfacht Normierungen)</li>
-                        <li>Entkopplung der Testverfahren dank Web-Schnittstelle (Unabhängigkeit von Testanbietern und -entwicklern)</li>
-                        <li>Nutzungsstatistiken & Abrechnungslogik (einfache, testübergreifende Nutzungsanalyse und Abrechnung)</li>
-                        <li>Flexibles Benutzer-, Gruppen- und Rechtesystem (Berücksichtigung des Föderalismus durch Abbildung kantonsspezifischer Strukturen)</li>
-                        <li>Responsive Design für Administration und Testdurchführungen (Durchführung z. B. auf Tablet möglich)</li>
+                        <li><strong>Digitalisierung</strong> von Papiertests (Kosten sparen, erleichterter Zugang, Standardisierung)</li>
+                        <li><strong>Automatische Auswertungen</strong> (mehr Effizienz, weniger Fehleranfälligkeit)</li>
+                        <li><strong>Zentrales Datenpool</strong> (ermöglicht schweizweite anonymisierte Auswertungen, vereinfacht Normierungen)</li>
+                        <li><strong>Entkopplung der Testverfahren</strong> dank Web-Schnittstelle (Unabhängigkeit von Testanbietern und -entwicklern)</li>
+                        <li><strong>Nutzungsstatistiken & Abrechnungslogik</strong> (einfache, testübergreifende Nutzungsanalyse und Abrechnung)</li>
+                        <li><strong>Flexibles Benutzer-, Gruppen- und Rechtesystem</strong> (Berücksichtigung des Föderalismus durch Abbildung kantonaler Strukturen)</li>
+                        <li><strong>Responsive Design</strong> für Administration und Testdurchführungen (Durchführung z. B. auf Tablet möglich)</li>
                     </ul>
                 </div>
             </div>
