refactor zahlen und fakten text

--- a/public/index.html
+++ b/public/index.html
@@ -262,22 +262,16 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-7">
+                <div class="col-lg-9">
                     <p>
-                        Die OTP wird seit dem Launch im August 2015 bereits rege genutzt.
+                        Die OTP wird seit dem Launch im August 2015 bereits rege genutzt. Mehr als <strong>1000
+                        BerufsberaterInnen</strong> aus <strong>26 Kantonen</strong> kümmern sich pro Jahr um
+                        <strong>Tausende Ratsuchende</strong>, welche <strong>Zehntausende Testdurchführungen</strong> machen
+                        während <strong>über 50 Administratoren</strong> sich um Kosten, Rechte und Daten kümmern.
                     </p>
-                    <ul>
-                        <li>Mehr als <strong>1000 BerufsberaterInnen</strong></li>
-                        <li>aus <strong>26 Kantonen</strong></li>
-                        <li>kümmern sich pro Jahr um <strong>Tausende Ratsuchende</strong>,</li>
-                        <li>welche <strong>Zehntausende Testdurchführungen</strong> machen</li>
-                        <li>während <strong>Duzende Administratoren</strong> sich um Kosten, Rechte und Daten kümmern.</li>
-                    </ul>
-                </div>
-                <div class="col-lg-5">
                     <p>
                         An das zentrale von <a class="success" href="http://www.netcetera.com/de/" target="_blank">netcetera</a>
-                        entwickelte Verwaltungsmodul sind über eine XML REST Schnittstelle bereits 14 von
+                        entwickelte Verwaltungsmodul sind über die erwähnte Web-Schnittstelle bereits 14 von
                         <a href="https://www.cloud-solutions.net/de/" target="_blank">cloud solutions</a> entwickelte
                         Testverfahren angebunden.
                     </p>
@@ -289,6 +283,12 @@
                         <li>Gamper Schulniveautest in FR</li>
                         <li>BRTA Leistungstest in FR</li>
                     </ul>
+                    <p>Die Anbindung eines weiteren Duzend Testverfahren ist geplant.</p>
+                </div>
+                <div class="col-lg-3">
+                    <p class="placeholder-text">
+                        Hier kommen evtl. noch ein paar Screenshots von Testverfahren und ein Download eines Berichts.
+                    </p>
                 </div>
             </div>
         </div>
