--- a/public/index.html
+++ b/public/index.html
@@ -270,7 +270,7 @@
                         während <strong>über 50 Administratoren</strong> sich um Kosten, Rechte und Daten kümmern.
                     </p>
                     <p>
-                        An das zentrale von <a class="success" href="http://www.netcetera.com/de/" target="_blank">netcetera</a>
+                        An das zentrale von <a class="success" href="http://www.netcetera.com/de/" target="_blank">Netcetera</a>
                         entwickelte Verwaltungsmodul sind über die erwähnte Web-Schnittstelle bereits 14 von
                         <a href="https://www.cloud-solutions.net/de/" target="_blank">cloud solutions</a> entwickelte
                         Testverfahren angebunden.
@@ -316,7 +316,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; netcetera AG, cloud solutions OÜ, SDBB | CSFO 2016
+                        Copyright &copy; Netcetera AG, cloud solutions OÜ, SDBB | CSFO 2016
                     </div>
                 </div>
             </div>
